[metadata]
name = prov2neo
version = 1.2.2
license = MIT
url = https://github.com/DLR-SC/prov2neo
author = Claas de Boer
author_email = claas.deboer@dlr.de
maintainer = Andreas Schreiber
maintainer_email = andreas.schreiber@dlr.de
description = "Import W3C PROV documents into Neo4j using py2neo\'s OGM."
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Database
    Topic :: Database :: Front-Ends
keywords =
    w3c prov
    neo4j
    graph import

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    py2neo==2021.2.3
    prov==2.0.0
    interchange
    click

[options.entry_points]
console_scripts = 
    prov2neo = prov2neo.cli:main